docs/api/qiskit/0.19/qiskit.circuit.library.XGate.mdx
---
title: XGate (v0.19)
description: API reference for qiskit.circuit.library.XGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.XGate
---

# XGate

<Class id="qiskit.circuit.library.XGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/x.py" signature="XGate(label=None)" modifiers="class">
  The single-qubit Pauli-X gate ($\sigma_x$).

  **Matrix Representation:**

$$
\begin{split}X = \begin{pmatrix}
0 & 1 \\
1 & 0
\end{pmatrix}\end{split}
$$

  **Circuit symbol:**

  ```python
       ┌───┐
  q_0: ┤ X ├
       └───┘
  ```

  Equivalent to a $\pi$ radian rotation about the X axis.

  <Admonition title="Note" type="note">
    A global phase difference exists between the definitions of $RX(\pi)$ and $X$.

$$
\begin{split}RX(\pi) = \begin{pmatrix}
0 & -i \\
-i & 0
\end{pmatrix}
= -i X\end{split}
$$
  </Admonition>

  The gate is equivalent to a classical bit flip.

$$
\begin{split}|0\rangle \rightarrow |1\rangle \\
|1\rangle \rightarrow |0\rangle\end{split}
$$

  Create new X gate.

  ## Attributes

  <span id="xgate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.XGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="xgate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.XGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="xgate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.XGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="xgate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.XGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="xgate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.XGate.add_decomposition" signature="XGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="xgate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.XGate.assemble" signature="XGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="xgate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.XGate.broadcast_arguments" signature="XGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="xgate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.XGate.c_if" signature="XGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="xgate-control" />

  ### control

  <Function id="qiskit.circuit.library.XGate.control" signature="XGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return a (mutli-)controlled-X gate.

    One control returns a CX gate. Two controls returns a CCX gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  <span id="xgate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.XGate.copy" signature="XGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="xgate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.XGate.inverse" signature="XGate.inverse()">
    Return inverted X gate (itself).
  </Function>

  <span id="xgate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.XGate.is_parameterized" signature="XGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="xgate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.XGate.mirror" signature="XGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="xgate-power" />

  ### power

  <Function id="qiskit.circuit.library.XGate.power" signature="XGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="xgate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.XGate.qasm" signature="XGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="xgate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.XGate.repeat" signature="XGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="xgate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.XGate.to_matrix" signature="XGate.to_matrix()">
    Return a numpy.array for the X gate.
  </Function>
</Class>

